datosdir = $(datadir)/nimuh/data/endlevel/cadiz



datos_DATA = zerg.png \
point.png \
people.ogg \
ovni_0001.png \
ovni_0000.png \
ovni.ogg \
music_end.ogg \
music.ogg \
map.jpg \
light.png \
hole.png \
crash.ogg \
congratulations_es.png \
congratulations_en.png \
cadiz_m.png \
animation.xml

EXTRA_DIST = $(datos_DATA)
