datosdir = $(datadir)/nimuh/data/main_menu/es



datos_DATA = preferences_0006.png \
play_0001.png \
play_0004.png \
preferences_0003.png \
missions_0009.png \
missions_0008.png \
play_0009.png \
missions_0003.png \
quit_0007.png \
play_0008.png \
quit_0005.png \
quit_0008.png \
play_0002.png \
quit_0000.png \
quit_0004.png \
missions_0000.png \
quit_0003.png \
missions_0004.png \
preferences_0001.png \
preferences_0002.png \
preferences_0000.png \
missions_0007.png \
play_0007.png \
preferences_0005.png \
missions_0001.png \
play_0005.png \
missions_0002.png \
preferences_0004.png \
play_0003.png \
missions_0006.png \
quit_0006.png \
play_0006.png \
play_0000.png \
preferences_0009.png \
quit_0009.png \
quit_0002.png \
quit_0001.png \
preferences_0008.png \
missions_0005.png \
preferences_0007.png \
credits_0009.png \
credits_0008.png \
credits_0007.png \
credits_0006.png \
credits_0005.png \
credits_0004.png \
credits_0003.png \
credits_0002.png \
credits_0001.png \
credits_0000.png \
howto_0009.png \
howto_0008.png \
howto_0007.png \
howto_0006.png \
howto_0005.png \
howto_0004.png \
howto_0003.png \
howto_0002.png \
howto_0001.png \
howto_0000.png

EXTRA_DIST = $(datos_DATA)
